version 1.1:

pl 18
	- Path::find("/usr/..") fix
	- Directed_graph_node
	- some Link_array extensions
	- Pointer_list::junk()

pl 17
	- naming: Pointer->Link, IPointer->Pointer
pl 16
	- Array::get()
	- P< > doco.

pl 15
	- #ifndef fixes (MB)
	- Dstream::clear ()

pl 14
	- interval methods
pl 13
	- better test-bed
	- Heap PQueue implementation

pl 12
	- No path search for "" and "-"

pl 11
	- template<> class P
	- assoc elem() methods

pl 10
	- Matrix_storage naming
	- Matrix_storage::try_right_multiply to help speed up
	  matrix multiply routines.

pl 9
	- _C iso _c_l
	- flower-debug.
	
pl 8
	

pl 7
	- PQueue blondification.
	- String_convert::i2hex_str fix, unsigned eqvs introduced
	- long long depreciated, now named I64
	- type I32 introduced. should be used iso int where 32 bits are 
	  needed(or, brr, assumed...)

pl 6-2
Bugfix
	- silly String( int... ) -> String( (char)... ) fix
	  really should junk ambiguous constructor overload
pl 6-1	

Bugfix
	- small but nasty include/fversion.hh fixed

pl 6
	- all of 4-1 and 5
Bugfix	
	- null_terminated -> is_binary test

pl 5
	- memmem interface, conditional compilation
	- snprintf

pl 4-1
	- included in new make structure, as a library of lilypond; 
	  for compiling you-ll need ../make and ../bin dirs from 
	  lilypond...
	
pl 4
	- great file-renaming.
	- String cleanup (binary <-> null terminate), several bugfixes
	- great renaming of String and String_convert interfaces
	- more conversions moved (copied actually) to String_convert
	- String indexing now all base = 0, not found = -1
	- renamed by to byte

pl 3
	- String::mid
	- memmove test code

pl 2 
	- StringConversio::bin2int_i
	- dumb prioq

pl 1
	- separated StringHandle and StringData
	- String::compare

0:
		

------------------
1.0:

pl 27-3
	- debug memmove code
	- StringData bugfix
	- old String::String( char, int ) bugfix

pl 27-1,2 (not released)
	patches by JCN
	- stringutils.cc included again 
	- bin2hex_str bugfix
	- String class handles null bytes